Fixed border radius for modal.  Added text-align center to try to center + sign for mobile devices.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,6 +21,7 @@
 }
 
 .add-item-button {
+    text-align: center;
     margin-right: auto;
     margin-left: 20px;
     background-color: rgba(0, 0, 0, 0.7);
@@ -142,18 +143,17 @@ h4 {
 }
 
 .modal-content {
-    border: solid black 1px;
     background-color: white;
     width: 400px;
     height: 500px;
-    border-radius: 5px;
+    border-radius: 10px;
 
     /* Need this for close button. */
     position: relative;
 }
 
 .modal-main {
-    border: solid black 1px;
+   
     display: flex;
     flex-direction: column;
 }
@@ -167,7 +167,7 @@ h4 {
 }
 
 .modal-sidebar {
-    border: solid black 1px;
+    border-right: solid black 1px;
     display: flex;
     justify-content: space-between;
 }
@@ -181,6 +181,8 @@ h4 {
 }
 
 .modal-title-container {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     background-color: var(--link-and-button-color);
     display: flex;
     flex-direction: row;
